# django_pytest

./: README.md  db.sqlite3  pyproject.toml  pytest.ini
django_test/: apps.py  models.py  views.py
django_test/migrations/: 0001_initial.py  0002_warehouse_delete_gudang.py  0003_product_transaction.py  0004_gudang_delete_warehouse.py  0005_produc_transactio_delete_product_delete_transaction.py  0006_rename_produc_product_rename_transactio_transaction_and_more.py  0007_produc_warehous_delete_product_delete_warehouse_and_more.py  0008_rename_produc_product_rename_warehous_warehouse.py  0009_transactio_delete_transaction.py  0010_transaction_delete_transactio.py  0011_transactio_delete_transaction.py  0012_rename_transactio_transaction.py  0013_rename_wtransaction_date_transaction_transaction_date.py  0014_remove_transaction_product_and_more.py
django_test/templates/: index.html
django_trial/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_django.py
