[tool.poetry]
name = "django-trial"
version = "0.1.0"
description = ""
authors = ["adamnabawi <adammuiznabawi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
pytest = "^8.2.0"
psycopg2-binary = "^2.9.9"
pytest-django = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
